--- a/src/stylesheets/HomePage.module.css
+++ b/src/stylesheets/HomePage.module.css
@@ -3,9 +3,10 @@
     height: inherit;
     background-color: var(--background30);
     position: relative;
+    
 }
 .header {
-    flex: .5;
+    width: 200px;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -26,7 +27,7 @@
 }
 
 .main {
-    flex: 2 0 0;
+    flex: 1;
     background-color: var(--background);
     display: flex;
     min-height: 0;
@@ -65,7 +66,8 @@
 
 @media(max-width: 1024px) {
     .header{
-        flex: .1;
+        width: 55px;
+        
     }
 }
 
@@ -79,6 +81,7 @@
         background-color: var(--secondary);
     }
     .header {
+        width: auto;
         padding: .5rem 10%;
         flex-direction: row;
         align-items: center;
