--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -57,6 +57,7 @@ body {
 
 #root {
   height: inherit;
+  overflow: hidden;
 }
 
 svg {
